examples/good/block.ypl
main(): {
    a=10;
    {
        a=11;
        out(a);
    }
    out(a);
}