examples/bad/while.ypl
main(): {
    while(1): {
        out("infinite");
    }
}